# coasti_superset_io

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python.yaml
docs/: example.ipynb
src/superset_io/: __init__.py  api.py  cli.py  session.py  utils.py
src/superset_io/api/: __init__.py  abc.py  assets.py  charts.py  dashboards.py  databases.py  datasets.py
src/superset_io/cli/: __init__.py  copy.py  explore.py  utils.py
src/superset_io/dependency_graph/: __init__.py  assets.py  graph.py  parser.py  repr.py
tests/: conftest.py
tests/assets/: people.db  superset_config.py
tests/assets/sample_assets/: metadata.yaml
tests/assets/sample_assets/charts/: Age_1.yaml
tests/assets/sample_assets/dashboards/: Test_Dash_1.yaml
tests/assets/sample_assets/databases/: SQLite.yaml
tests/assets/sample_assets/datasets/SQLite/: people_1.yaml
tests/integration/: conftest.py  docker-compose.yml  superset_instance.py  test_io.py
tests/unit/: test_api.py  test_dependency_graph.py  test_session.py  test_utils.py
tests/unit/dependency_graph/: test_assets.py  test_graph.py  test_parser.py
