[project]
name = "superset-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.21.1",
]

[project.scripts]
coasti-superset-io = "coasti_superset_io:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
